--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ My Creative Skills & Experiences.</div>
 </div>
 <div class="bars">
                         <div class="info">
-                            <span>Photoshop</span>
+                            <span>PHP</span>
                             <span>50%</span>
                         </div>
 <div class="line php">
